<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/convert_from_text_view"
        android:text="@string/convert_from_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginRight="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:id="@+id/amount_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="1.0"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/unit_type_spinner"
        android:layout_below="@+id/amount_edit_text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/unit_type_spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:columnCount="2"
        android:rowCount="6"
        android:orientation="horizontal"
        android:padding="15dp"
        android:background="#ff00ffff">

        <TextView
            android:id="@+id/tsp_text_view"
            android:text="@string/default_teaspoon_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/cup_text_view"
            android:text="@string/default_cup_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/tbs_text_view"
            android:text="@string/default_tablespoon_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/oz_text_view"
            android:text="@string/default_oz_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/kg_text_view"
            android:text="@string/default_kg_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/quart_text_view"
            android:text="@string/default_quart_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/gallon_text_view"
            android:text="@string/default_gallon_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/pound_text_view"
            android:text="@string/default_pound_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/ml_text_view"
            android:text="@string/default_ml_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/liter_text_view"
            android:text="@string/default_liter_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/mg_text_view"
            android:text="@string/default_mg_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/pint_text_view"
            android:text="@string/default_pint_value"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp"/>

    </GridLayout>

</RelativeLayout>
